src/app/support/[customerID]/support.module.css
.container {
  display: flex;
  height: calc(100vh - 80px);
}

.header {
  grid-area: header;
  border-bottom: 1px solid var(--cord-grey);
}

.supportChatContainer {
  display: grid;
  grid-template-rows: auto 1fr auto;
  grid-template-areas:
    'header'
    'threads'
    'composer';
  width: 100%;
  padding-right: 8px;
  height: 100%;
  flex: 2;
}

@media (max-width: 1024px) {
  .threadOpen {
    display: none;
  }
}

.threads {
  grid-area: threads;
  display: flex;
  flex-direction: column-reverse;
  height: 100%;
  overflow: auto;
}

.threadReplies {
  grid-area: replies;
  display: flex;
  align-items: center;
  gap: 8px;
  font-size: 0.8rem;
  color: var(--cord-grey-dark);
  padding-left: 36px;
  cursor: pointer;
}

.supportChatContainer :global(.cord-v2 .cord-composer) {
  grid-area: composer;
  /*  margin matches that in the thread details */
  margin-top: 12px;
}

.threadContainer {
  transition: background-color 0.2s;
  padding: 8px;
  cursor: pointer;
}

.threadContainer :global(.cord-v2.cord-message) {
  padding: 0;
}

.threadContainer:hover {
  background-color: var(--cord-grey-light);
}

.threadContainer :global(.cord-v2.cord-message) {
  background-color: inherit;
}

.threadContainer.hasReplies :global(.cord-v2.cord-message) {
  grid-template-rows: auto auto auto auto;

  grid-template-areas:
    'avatar authorName timestamp sentViaIcon . optionsMenu'
    '. messageContent messageContent messageContent messageContent optionsMenu'
    '. replies replies replies replies .';
}

